objects/Cleanse_Company_Name__c.object
<CustomObject>
    <description>This table contains records of commonly used words in the names of companies for SSV matching purposes.</description>
    <fields>
        <fullName>Match_Type__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field can be one of three letters (A = Anywhere in the string, S = Start of the string, or E = Exact).</description>
        <label>Match Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Word_Match_String__c</fullName>
        <label>Word Match String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Word_Replace_String__c</fullName>
        <label>Word Replace String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cleanse Company Name</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Word_Match_String__c</columns>
        <columns>Word_Replace_String__c</columns>
        <columns>Match_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cleanse Company Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cleanse Company Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>